syntax = "proto3";

package api.proto.v1.rpc;

option go_package = "github.com/apetsko/gophkeeper/protogen/api/proto/v1/rpc";

import "api/proto/v1/models/record.proto";

message DataListRequest {
  int32 page = 1;
  int32 limit = 2;
}

message DataListResponse {
  repeated api.proto.v1.models.Record records = 1;
  int32 count = 2;
}
